--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,13 @@ body {
     background-attachment: fixed;
 }
 
+.container {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+}
+
 .headerContent {
     display: flex;
     width: 100%;
@@ -26,45 +33,44 @@ body {
     display: flex;
     gap: .75em;
     white-space: nowrap;
-    
+
 }
 
-.userArea li a{
+.userArea li a {
     color: #fff;
     font-size: 14px;
 }
 
-.userArea li a:hover{
+.userArea li a:hover {
     color: #fff;
-    text-decoration:underline;
+    text-decoration: underline;
 }
 
 .main {
     margin: 0 38px;
-    position: absolute;
-    
+
+
 }
 
 .title {
     display: flex;
-    margin-top: 35px;
     justify-content: center;
     width: 100%;
     height: 140px;
-  
+
 }
 
 .mainBlock {
     display: flex;
     justify-content: space-between;
-    
+
 }
 
 .mainBlock .mainBlockContainer {
     background-color: brown;
     width: 1657px;
     height: 1614px;
-    box-shadow: 0px 0px 15px 0px rgba(10,10,10,0.7);
+    box-shadow: 0px 0px 15px 0px rgba(10, 10, 10, 0.7);
 }
 
 .mainBlock .mainBlockContainer::before {
@@ -75,4 +81,120 @@ body {
     width: 1657px;
     height: 15px;
     margin-top: -6px;
-  }
+}
+
+.head {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 100%;
+    height: 45px;
+    background: linear-gradient(to top, rgba(20, 20, 20, 0.352), transparent 30%), #60473b url("assets/img/Navbar-background-overworld.webp");
+}
+
+.headerToggle {
+    width: 24px;
+    height: 24px;
+    align-self: center;
+    margin: 5px;
+    position: relative;
+    border-radius: 3px;
+    cursor: pointer;
+    flex: 0 0 auto;
+    padding: 12px;
+}
+
+.headerToggle::before {
+    border-width: 2px 0 0 2px;
+    top: 5px;
+    left: 5px;
+    content: "";
+    width: 3px;
+    height: 3px;
+    border-style: solid;
+    border-color: #fff;
+    display: block;
+    position: absolute;
+}
+
+.headerToggle::after {
+    border-width: 2px 2px 0 0;
+    top: 5px;
+    right: 5px;
+    content: "";
+    width: 3px;
+    height: 3px;
+    border-style: solid;
+    border-color: #fff;
+    display: block;
+    position: absolute;
+}
+
+.headerToggle span::before {
+    border-width: 0 0 2px 2px;
+    bottom: 5px;
+    left: 5px;
+    content: "";
+    width: 3px;
+    height: 3px;
+    border-style: solid;
+    border-color: #fff;
+    display: block;
+    position: absolute;
+}
+
+.headerToggle span::after {
+    border-width: 0 2px 2px 0;
+    bottom: 5px;
+    right: 5px;
+    content: "";
+    width: 3px;
+    height: 3px;
+    border-style: solid;
+    border-color: #fff;
+    display: block;
+    position: absolute;
+}
+
+footer {
+    width: 100%;
+    height: 35px;
+    background-color: #000538;
+    bottom: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 0.8em;
+}
+
+.footerRight, .footerRight a {
+    display: flex;
+    align-items: center;
+    color: #fff;
+    gap: 0.2em;
+
+}
+
+.footerRight a:hover {
+    text-decoration: underline;
+}
+
+.footerMiddle {
+    display: flex;
+    align-items: center;
+}
+
+.footerLeft, .footerLeft a {
+    display: flex;
+    align-items: center;
+    color: #fff;
+    gap: 0.2em;
+
+}
+
+.footerLeft a:hover {
+    text-decoration: underline;
+}
