--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,3 +1,9 @@
+.asideBlock {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .sidebarNavigation {
     border-radius: 0 0 5px 5px;
 }
@@ -8,7 +14,7 @@
     background: linear-gradient(rgba(20, 20, 20, 0.1), rgba(20, 20, 20, 0.1)), #60473b url("assets/img/Content-background-overworld.jpg");
     width: 159px;
     height: auto;
-    min-height: 256px;
+    min-height: 234px;
     max-height: 100%;
     border: 1px solid rgba(255,255,255,0.1);
     box-shadow: 0px 0px 15px 0px rgba(10,10,10,0.7);
@@ -65,7 +71,7 @@
     width: 100%;
     height: auto;
     max-height: 100%;
-    min-height: 224px;
+    min-height: 200px;
     margin: 0;
     padding: 0;
     display: flex;
@@ -93,4 +99,9 @@
     font-size: .75em;
     line-height: 1.125em;
     white-space: nowrap;
+}
+
+.merch img {
+    width: 135px;
+    
 }
