--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -57,14 +57,12 @@
     width: 0;
     height: 0;
     border-style: solid;
-    width: 0;
-    height: 0;
-    border-top: 5px solid transparent;
+    border-top: 6px solid #eae3d1;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-    border-bottom: 5px solid rgba(234, 227, 209, 0.5);
-    vertical-align: middle;
+    border-bottom: 6px solid transparent;
     flex: 0 0 auto;
+    margin-top: 10px;
 }
 
 .sidebarNavigation ul,.subsidebarNavigation ul {
@@ -99,6 +97,7 @@
     font-size: .75em;
     line-height: 1.125em;
     white-space: nowrap;
+    font-weight: 400;
 }
 
 .merch img {
