--- a/src/main.css
+++ b/src/main.css
@@ -7,8 +7,6 @@ body {
 .container {
     width: 100%;
     height: 100%;
-    top: 0;
-    bottom: 0;
 }
 
 .headerContent {
@@ -67,10 +65,14 @@ body {
 }
 
 .mainBlock .mainBlockContainer {
-    background-color: brown;
-    width: 1657px;
+    background-color: #5a433a;
+    width: 100%;
     height: 1614px;
     box-shadow: 0px 0px 15px 0px rgba(10, 10, 10, 0.7);
+    margin-left: 12px;
+    border-width: 1px 1px 0;
+    border-color: rgba(255, 255, 255, 0.1) rgba(13, 4, 2, 0.2) rgba(13, 4, 2, 0.2) rgba(255, 255, 255, 0.1);
+    border-style: solid;
 }
 
 .mainBlock .mainBlockContainer::before {
@@ -78,7 +80,8 @@ body {
     background-image: url("assets/img/Grass-top-overworld.webp");
     background-repeat: repeat-x;
     position: absolute;
-    width: 1657px;
+    width: auto;
+    min-width: calc(100% - 247px);
     height: 15px;
     margin-top: -6px;
 }
@@ -96,7 +99,7 @@ body {
     width: 24px;
     height: 24px;
     align-self: center;
-    margin: 5px;
+    margin: 4px 8px;
     position: relative;
     border-radius: 3px;
     cursor: pointer;
@@ -155,6 +158,69 @@ body {
     display: block;
     position: absolute;
 }
+
+.headerRight, .headerLeft {
+    display: flex;
+}
+
+.headerTab {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+}
+
+.headerTab li {
+    background-color: rgba(20, 20, 20, 0.12);
+    width: 92px;
+    height: 31px;
+    display: flex;
+    align-items: center;
+    margin-right: 6px;
+    border-radius: 6px 6px 0 0;
+    border: 1px solid rgba(20, 20, 20, 0.07);
+    white-space: nowrap;
+}
+
+.headerTab .selected {
+    background-color: rgba(20, 20, 20, 0.3);
+}
+
+
+.headerTab li:hover, .headerTab .selected:hover {
+    border: 1px solid rgba(20, 20, 20, 0.3);
+    background-color: rgba(20, 20, 20, 0.3);
+}
+
+.headerTab li a {
+    color: #c4ebd0;
+    font-size: 14px;
+    line-height: 24px;
+    padding: 3px 12px;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+.headerTab li a:hover {
+    text-decoration: underline;
+}
+
+.headerTab .selected a:hover {
+    text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 footer {
     width: 100%;
