--- a/src/main.css
+++ b/src/main.css
@@ -47,7 +47,6 @@ body {
 .main {
     margin: 0 38px;
 
-
 }
 
 .title {
@@ -76,7 +75,7 @@ body {
 }
 
 .mainBlock .mainBlockContainer::before {
-    content: ".";
+    content: "";
     background-image: url("assets/img/Grass-top-overworld.webp");
     background-repeat: repeat-x;
     position: absolute;
@@ -172,7 +171,8 @@ body {
 
 .headerTab li {
     background-color: rgba(20, 20, 20, 0.12);
-    width: 92px;
+    width: auto;
+    min-width: 58px;
     height: 31px;
     display: flex;
     align-items: center;
@@ -198,6 +198,7 @@ body {
     line-height: 24px;
     padding: 3px 12px;
     font-family: Helvetica, Arial, sans-serif;
+    margin: auto;
 }
 
 .headerTab li a:hover {
@@ -208,11 +209,108 @@ body {
     text-decoration: none;
 }
 
+.formContent {
+    display: flex;
+    margin-left: 6px;
+    margin-right: 12px;
+    margin-bottom: 6px;
+    align-items: center;
+}
+
+.formContent input:focus {
+    outline: 0;
+}
+
+.formContent input {
+    font-size: 14px;
+    line-height: 16px;
+    text-align: left;
+    padding: 3px 5px;
+    background: rgba(20, 20, 20, 0.3);
+    border-radius: 2px 0 0 2px;
+    border-width: 1px;
+    border-right-width: 1px;
+    border-style: solid;
+    border-right-style: solid;
+    border-color: rgba(13, 4, 2, 0.5) rgba(255, 255, 255, 0.1) rgba(255, 255, 255, 0.1) rgba(13, 4, 2, 0.5);
+    border-right: 0;
+    word-wrap: break-word;
+    color: #eae3d1;
+    width: 182px;
+    height: 25px;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+.formContent button {
+    display: block;
+    width: 28px;
+    height: 25px;
+    background: linear-gradient(rgba(20, 20, 20, 0.2), rgba(20, 20, 20, 0.2)), #7b573d url("assets/img/Button-background-overworld.webp") center center / cover repeat-x;
+    border: 1px solid;
+    border-top-color: currentcolor;
+    border-right-color: currentcolor;
+    border-bottom-color: currentcolor;
+    border-left-color: currentcolor;
+    border-color: rgba(151, 107, 69, 0.7) rgba(86, 47, 33, 0.7) rgba(86, 47, 33, 0.7) rgba(151, 107, 69, 0.7);
+    border-radius: 0 2px 2px 0;
+}
+
+.formContent button:before {
+    border-width: 2px;
+    border-radius: 100%;
+    width: 8px;
+    height: 8px;
+    margin: 0 0 1px;
+    transform: translateX(2px);
+}
+
+.formContent button:after {
+    border-width: 1px;
+    width: 3px;
+    height: 0;
+    transform: translate(10px, -2px) rotate(45deg);
+}
+
+.formContent button:before, .formContent button:after {
+    content: '';
+    display: block;
+    z-index: 1;
+    place-self: center;
+    border-style: solid;
+    border-color: #fff;
+    pointer-events: none;
+}
 
 
+.mainWrapper {
+    background-color: #5a433a;
+    padding: 12px;
+    width: auto;
+    max-width: 100%;
+    height: 1545px;
+}
 
+.welcomeContent {
+    border-width: 1px;
+    border-style: solid;
+    border-top-color: rgb(255, 255, 255, .1);
+    border-right-color: rgb(13, 4, 2, .5);
+    border-bottom-color: rgb(13, 4, 2, .5);
+    border-left-color: rgb(255, 255, 255, .1);
+    border-radius: 8px;
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    min-height: 187px;
+}
 
-
+.welcomeContentBlock {
+    background: rgba(255,255,255,0.03);
+    margin: 7px;
+    width: auto;
+    max-width: 1617px;
+    height: 187px;
+}
 
 
 
