--- a/src/main.css
+++ b/src/main.css
@@ -229,9 +229,7 @@ body {
     background: rgba(20, 20, 20, 0.3);
     border-radius: 2px 0 0 2px;
     border-width: 1px;
-    border-right-width: 1px;
     border-style: solid;
-    border-right-style: solid;
     border-color: rgba(13, 4, 2, 0.5) rgba(255, 255, 255, 0.1) rgba(255, 255, 255, 0.1) rgba(13, 4, 2, 0.5);
     border-right: 0;
     word-wrap: break-word;
@@ -268,7 +266,7 @@ body {
     border-width: 1px;
     width: 3px;
     height: 0;
-    transform: translate(10px, -2px) rotate(45deg);
+    transform: translate(11px, -2px) rotate(45deg);
 }
 
 .formContent button:before, .formContent button:after {
@@ -284,6 +282,7 @@ body {
 
 .mainWrapper {
     background-color: #5a433a;
+    border-top: 1px solid #ffffff1a;
     padding: 12px;
     width: auto;
     max-width: 100%;
@@ -309,14 +308,74 @@ body {
     margin: 7px;
     width: auto;
     max-width: 1617px;
-    height: 187px;
+    height: 181px;
 }
 
 
+.welcomeTitle h1{
+    color: #eae3d1;
+    font-family: Helvetica,Arial,sans-serif;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 400;
+    position: relative;
+    padding-top: 8px;
+    margin: 0;
+}
 
+.welcomeTitle span{
+    color: #eae3d1;
+    font-weight: bolder;
+}
 
+.welcomeTitle .welcomeSubTitle,.welcomeTitle .dataWiki{
+    color: #eae3d1;
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+    font-family: Helvetica,Arial,sans-serif;
+    font-weight: 400;
+}
 
+.dataWiki {
+  margin-top: 6px;
+}
 
+.dataWiki span {
+    font-weight: 400;
+    color: #9fecf0;
+    font-family: Helvetica,Arial,sans-serif;
+}
+
+.welcomeContentBlock .midia {
+    display: flex;
+    justify-content: center;
+}
+
+.midia ul {
+    display: flex;
+    
+    
+}
+
+.midia ul li {
+    display: flex;
+    align-items: center;
+   
+}
+
+.midia ul li span {
+    margin: 5px 1em;
+    color: #eae3d1;
+    font-weight: 700;
+    font-size: 14px;
+    
+}
+
+.midia ul li a {
+    margin: 0 2px;
+   
+}
 
 
 
