--- a/src/main.css
+++ b/src/main.css
@@ -299,51 +299,70 @@ body {
     width: auto;
     max-width: 100%;
     height: auto;
-    min-height: 187px;
+    min-height: 176px;
+    padding: 7px;
+    margin-bottom: 2px;
 }
 
 .welcomeContentBlock {
-    background: rgba(255,255,255,0.03);
-    margin: 7px;
+    background: rgba(255, 255, 255, 0.03);
     width: auto;
     max-width: 1617px;
-    height: 181px;
+    height: 177px;
+    padding: 8px 5px;
+    margin: auto;
 }
 
+.welcomeContentGroup {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    height: 100%;
+}
 
-.welcomeTitle h1{
+.welcomeTitle {
+    margin: 3px 0;
+    width: 100%;
+}
+
+.welcomeTitle h1 {
     color: #eae3d1;
-    font-family: Helvetica,Arial,sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     text-align: center;
     font-size: 24px;
     font-weight: 400;
     position: relative;
-    padding-top: 8px;
-    margin: 0;
+    margin: 0 0 4px 0;
 }
 
-.welcomeTitle span{
+.welcomeTitle span {
     color: #eae3d1;
     font-weight: bolder;
 }
 
-.welcomeTitle .welcomeSubTitle,.welcomeTitle .dataWiki{
+.welcomeSubTitle {
+    margin: auto 3px;
+}
+
+.welcomeTitle .welcomeSubTitle, .welcomeTitle .dataWiki {
     color: #eae3d1;
     display: flex;
     justify-content: center;
     font-size: 12px;
-    font-family: Helvetica,Arial,sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     font-weight: 400;
 }
 
 .dataWiki {
-  margin-top: 6px;
+    margin: 6px auto;
 }
 
 .dataWiki span {
     font-weight: 400;
     color: #9fecf0;
-    font-family: Helvetica,Arial,sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     cursor: pointer;
 }
 
@@ -354,30 +373,32 @@ body {
 .welcomeContentBlock .midia {
     display: flex;
     justify-content: center;
+    margin: 2px 0;
 }
 
 .midia ul {
     display: flex;
     padding: 0;
-    
+    align-items: center;
+    margin: 5px 14px;
 }
 
 .midia ul li {
-    display: flex;
-    align-items: center;
+    display: inline;
+
 }
 
-.midia ul li span {
-    margin: 5px 1em;
+.midia ul span {
+    line-height: 22.4px;
     color: #eae3d1;
     font-weight: 700;
     font-size: 14px;
-    
+    margin-right: 12px;
 }
 
 .midia ul li a {
     margin: 0 2px;
-   
+
 }
 
 
