--- a/src/main.css
+++ b/src/main.css
@@ -436,7 +436,7 @@ body {
     align-items: flex-start;
 }
 
-.mobileBlockGroup,.consoleBlockGroup {
+.mobileBlockGroup, .consoleBlockGroup {
     display: flex;
     align-items: center;
 }
@@ -447,7 +447,8 @@ body {
     display: flex;
     margin: 0;
     padding: 0;
-
+    line-height: 12px;
+    font-weight: bold;
 }
 
 .desktopBlock .desktopBlockGroup .desktopIcons,
@@ -503,6 +504,88 @@ body {
 .smallTextSecundary a {
     color: #808080;
     font-size: 9px;
+}
+
+.mainContent {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 1px;
+    grid-row-gap: 1px;
+    margin: auto;
+    width: auto;
+    max-width: 100%;
+    height: auto;
+}
+
+.border {
+    border-width: 1px;
+    border-style: solid;
+    border-top-color: rgb(255, 255, 255, .1);
+    border-right-color: rgb(13, 4, 2, .5);
+    border-bottom-color: rgb(13, 4, 2, .5);
+    border-left-color: rgb(255, 255, 255, .1);
+    border-radius: 8px;
+}
+
+.teste1 {
+    width: 1125px;
+    height: 100px;
+    grid-area: 1 / 1 / 2 / 3;
+}
+
+.teste2 {
+    width: 500px;
+    height: 100px;
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+.teste3 {
+    width: 500px;
+    height: 100px;
+    grid-area: 2 / 1 / 3 / 2;
+}
+
+.teste4 {
+    width: 500px;
+    height: 100px;
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+.teste5 {
+    width: 500px;
+    height: 100px;
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+.teste6 {
+    width: 500px;
+    height: 100px;
+    grid-area: 3 / 1 / 4 / 2;
+}
+
+.teste7 {
+    width: 500px;
+    height: 100px;
+    grid-area: 3 / 2 / 4 / 3;
+}
+
+.teste8 {
+    width: 500px;
+    height: 100px;
+    grid-area: 3 / 3 / 4 / 4;
+}
+
+.teste9 {
+    width: 625px;
+    height: 100px;
+    grid-area: 4 / 1 / 5 / 2;
+}
+
+.teste10 {
+    width: 1000px;
+    height: 100px;
+    grid-area: 4 / 2 / 5 / 4;
 }
 
 footer {
