--- a/src/main.css
+++ b/src/main.css
@@ -507,11 +507,6 @@ body {
 }
 
 .mainContent {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 1px;
-    grid-row-gap: 1px;
     margin: auto;
     width: auto;
     max-width: 100%;
@@ -526,66 +521,67 @@ body {
     border-bottom-color: rgb(13, 4, 2, .5);
     border-left-color: rgb(255, 255, 255, .1);
     border-radius: 8px;
+    margin: 2px;
+}
+
+.mainContentGroup {
+    display: flex;
+    margin: auto;
+}
+
+.mainContentGroup2 {
+    display: flex;
+    margin: auto;
 }
 
 .teste1 {
-    width: 1125px;
-    height: 100px;
-    grid-area: 1 / 1 / 2 / 3;
+    width: 1188.75px;
+    height: 369px; 
 }
 
 .teste2 {
-    width: 500px;
-    height: 100px;
-    grid-area: 1 / 3 / 2 / 4;
+    width: 436.25px;
+    height: 369px;  
 }
 
 .teste3 {
-    width: 500px;
-    height: 100px;
-    grid-area: 2 / 1 / 3 / 2;
+    width: 446.333px;
+    height: 285px;
 }
 
 .teste4 {
-    width: 500px;
-    height: 100px;
-    grid-area: 2 / 2 / 3 / 3;
+    width: 629.333px;
+    height: 285px; 
 }
 
 .teste5 {
-    width: 500px;
-    height: 100px;
-    grid-area: 2 / 3 / 3 / 4;
+    width: 545.333px;
+    height: 285px; 
 }
 
 .teste6 {
-    width: 500px;
-    height: 100px;
-    grid-area: 3 / 1 / 4 / 2;
+    width: 797.567px;
+    height: 405.4px;
 }
 
 .teste7 {
-    width: 500px;
-    height: 100px;
-    grid-area: 3 / 2 / 4 / 3;
+    width: 411.717px;
+    height: 405.4px;
 }
 
 .teste8 {
-    width: 500px;
-    height: 100px;
-    grid-area: 3 / 3 / 4 / 4;
+    width: 411.717px;
+    height: 405.4px;
 }
 
 .teste9 {
-    width: 625px;
-    height: 100px;
-    grid-area: 4 / 1 / 5 / 2;
+    width: 346.25px;
+    height: 167.8px;
 }
 
 .teste10 {
-    width: 1000px;
-    height: 100px;
-    grid-area: 4 / 2 / 5 / 4;
+    width: 1278.75px;
+    height: 167.8px; 
 }
 
 footer {
