--- a/src/responsive.css
+++ b/src/responsive.css
@@ -1,4 +1,35 @@
+@media only screen and (min-width: 1365px) {
+    .mainBlock .mainBlockContainer {
+        min-width: calc(100% - 247px);
+    }
+
+    .mainBlock .mainBlockContainer {
+        background-color: #5a433a;
+        width: 100%;
+        min-width: calc(100% - 247px);
+        height: 1614px;
+        box-shadow: 0px 0px 15px 0px rgba(10, 10, 10, 0.7);
+        margin-left: 12px;
+        border-width: 1px 1px 0;
+        border-color: rgba(255, 255, 255, 0.1) rgba(13, 4, 2, 0.2) rgba(13, 4, 2, 0.2) rgba(255, 255, 255, 0.1);
+        border-style: solid;
+    }
+    .versionContent {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        
+    }
+
+    
+}
+
 @media only screen and (max-width: 1365px) {
+    .main {
+        margin: 13px;
+
+    }
+
     .title {
         display: flex;
         justify-content: left;
@@ -6,9 +37,11 @@
         height: 140px;
 
     }
+
     .mainBlock .mainBlockContainer {
         height: 100%;
     }
+
     .mainWrapper {
         height: 100%;
     }
@@ -68,6 +101,23 @@
         display: none;
     }
 
+    .mainBlock .mainBlockContainer::before {
+        display: none;
+    }
+
+    .versionContent {
+        display: flex;
+        margin: 6px 0;
+        width: calc(100% - 1em);
+        height: auto;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .welcomeContentBlock {
+        height: auto;
+    }
+
     .mainContentGroup2 {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -75,16 +125,17 @@
         grid-column-gap: 0px;
         grid-row-gap: 0px;
     }
+
     .teste3 {
         grid-area: 1 / 1 / 2 / 2;
-        width: 100%;
+        width: 99.5%;
     }
-    
+
     .teste4 {
         grid-area: 1 / 2 / 2 / 3;
-        width: 100%;
+        width: 99.5%;
     }
-    
+
     .teste5 {
         grid-area: 2 / 1 / 3 / 3;
         width: 100%;
