--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -6,20 +6,47 @@
 
 .sidebarNavigation {
     border-radius: 0 0 5px 5px;
+    display: inline-block;
 }
+
+.animate {
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    transition: all 0.3s;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    /* Chrome and Safari */
+    -moz-backface-visibility: hidden;
+    /* Firefox */
+    -ms-backface-visibility: hidden;
+    /* Internet Explorer */
+}
+
+.sidebarNavigation input, .subsidebarNavigation input {
+    display: none;
+}
+
+.sidebarNavigation input ~ ul,.subsidebarNavigation input ~ ul {
+    visibility: visible;
+    opacity: 1;
+    top: 0;
+}
+
+
+.sidebarNavigation input:checked ~ ul, .subsidebarNavigation input:checked ~ ul {
+    position: relative;
+    visibility: hidden;
+    opacity: 0;
+    top: -20px;
+    z-index: 1;
+}
+
 .subsidebarNavigation {
     border-radius: 5px;
 }
-.sidebarNavigation,.subsidebarNavigation {
-    background: linear-gradient(rgba(20, 20, 20, 0.1), rgba(20, 20, 20, 0.1)), #60473b url("assets/img/Content-background-overworld.jpg");
-    width: 159px;
-    height: auto;
-    min-height: 234px;
-    max-height: 100%;
-    border: 1px solid rgba(255,255,255,0.1);
-    box-shadow: 0px 0px 15px 0px rgba(10,10,10,0.7);
-    margin: 0 0 12px 0;
-}
+
 
 .sidebarNavigation::before {
     content: "";
@@ -29,9 +56,11 @@
     width: 158px;
     height: 15px;
     margin-top: -6px;
+    z-index: 3;
 }
 
 .subtitle {
+    background: linear-gradient(rgba(20, 20, 20, 0.1), rgba(20, 20, 20, 0.1)), #60473b url("assets/img/Content-background-overworld.jpg");
     background-color: rgba(20, 20, 20, 0.15);
     border-bottom: 1px solid rgba(10, 10, 10);
     width: 100%;
@@ -47,6 +76,8 @@
     align-items: center;
     justify-content: space-between;
     margin: 0;
+    z-index: 2;
+    position: relative;
 }
 
 .subtitle::after {
@@ -65,31 +96,36 @@
     margin-top: 10px;
 }
 
-.sidebarNavigation ul,.subsidebarNavigation ul {
-    width: 100%;
-    height: auto;
-    max-height: 100%;
-    min-height: 200px;
-    margin: 0;
-    padding: 0;
+.sidebarNavigation ul, .subsidebarNavigation ul {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 4px 0;
+    padding: 4px;
+    background: linear-gradient(rgba(20, 20, 20, 0.1), rgba(20, 20, 20, 0.1)), #60473b url("assets/img/Content-background-overworld.jpg");
+    width: 158px;
+    height: auto;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    box-shadow: 0px 0px 15px 0px rgba(10, 10, 10, 0.7);
+    margin: 0 0 12px 0;
+    border-radius: 0 0 5px 5px;
 }
 
-.sidebarNavigation ul li,.subsidebarNavigation ul li   {
-   width: 150px; 
-   height: 24px;
-   padding: 0 8px;
+.sidebarNavigation ul li, .subsidebarNavigation ul li {
+    width: auto;
+    min-width: calc(100% - 4px);
+    height: 24px;
+    padding: 0 4px;
+    white-space: nowrap;
+    max-width: 100%;
 }
 
-.sidebarNavigation ul li:hover,.subsidebarNavigation ul li:hover  {
-   background-color: rgba(20,20,20,0.25);
-   border-radius: 5px;
+.sidebarNavigation ul li:hover, .subsidebarNavigation ul li:hover {
+    background-color: rgba(20, 20, 20, 0.25);
+    border-radius: 5px;
 }
-.sidebarNavigation ul li a,.subsidebarNavigation ul li a {
+
+.sidebarNavigation ul li a, .subsidebarNavigation ul li a {
     font-family: Helvetica, Arial, sans-serif;
     color: #c4ebd0;
     margin: 0;
@@ -102,5 +138,5 @@
 
 .merch img {
     width: 135px;
-    
+
 }
