--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -32,6 +32,7 @@
     visibility: visible;
     opacity: 1;
     top: 0;
+    height: auto;
 }
 
 
@@ -41,6 +42,10 @@
     opacity: 0;
     top: -20px;
     z-index: 1;
+    transition: all .3s ease-in;
+    height: 0;
+    margin: 0;
+    overflow: hidden;
 }
 
 .subsidebarNavigation {
@@ -109,6 +114,8 @@
     box-shadow: 0px 0px 15px 0px rgba(10, 10, 10, 0.7);
     margin: 0 0 12px 0;
     border-radius: 0 0 5px 5px;
+    transition: all .3s ease-in;
+    height: 216px;
 }
 
 .sidebarNavigation ul li, .subsidebarNavigation ul li {
